# Bioinfomatics

./: .gitattributes  .gitignore  ATAD3B_DNA.fa.rtf  GFF,GTF_format.md  Makefile  README.md  RELEASE_NOTES_upstream_by_gene_GRCh38_Ensembl108.md  environment.yml  extract_upstream.py  find.py  find_where.py  github_release_assets.sha256  pyproject.toml
data/: README.md  gene_annotation.tsv  siTRF1_DEG_list_gene_name.txt
docs/: FINAL_REPORT.html  FINAL_REPORT.md  alphagenome_new_data_report.md  alphagenome_todo.md  gff_gtf_format.md  trf1_binding_error_interpretation.md  trf1_promoter_overlap.md
legacy/upstream_extraction/: README.md  release_notes.md  verify_archive.md
scripts/: alphagenome_bj_chipatlas_candidates.py  alphagenome_bj_pilot.py  alphagenome_metadata_probe.py  analyze_chipatlas_terf1.py  analyze_new_terf1_gtrd.py  analyze_trf1_binding_error_network.py  nearest_peak_to_deg.py  peak_location_distribution.py  peak_location_distribution_hg38.py  scan_ttaggg_promoters.py  summarize_alphagenome_chipatlas_candidates.py  trf1_extended_audit.py  trf1_promoter_overlap.py  ttaggg_motif_batch.py
src/trf1_overlap/: __init__.py  annotation.py  chroms.py  cli.py  deg.py  intersect.py  peaks.py  plots.py  promoter.py  report.py
tests/: test_chroms.py  test_promoter.py
